{
  "version": 4,
  "terraform_version": "1.8.1",
  "serial": 131,
  "lineage": "4cf49f07-d705-b2f6-68cc-eaacece5d1d9",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "Lonintenretnsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].Main",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/4eba850c-01a8-4df2-ab0e-99abc5db481c/resourceGroups/Corp-Lon-Internet/providers/Microsoft.Network/networkSecurityGroups/Corp-Lon-Internet-NSG",
            "location": "uksouth",
            "name": "Corp-Lon-Internet-NSG",
            "resource_group_name": "Corp-Lon-Internet",
            "security_rule": [],
            "tags": {
              "Office": "London",
              "environment": "PROD",
              "type": "External"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.Loninternet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "loncorpnetNSGClients",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].Main",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/4eba850c-01a8-4df2-ab0e-99abc5db481c/resourceGroups/Corp-Lon-Network/providers/Microsoft.Network/networkSecurityGroups/Corp-Lon-Core-Network-NSGClients",
            "location": "uksouth",
            "name": "Corp-Lon-Core-Network-NSGClients",
            "resource_group_name": "Corp-Lon-Network",
            "security_rule": [],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rgNetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "loncorpnetNSGInfra",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].Main",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/4eba850c-01a8-4df2-ab0e-99abc5db481c/resourceGroups/Corp-Lon-Network/providers/Microsoft.Network/networkSecurityGroups/Corp-Lon-Core-Network-NSGInfra",
            "location": "uksouth",
            "name": "Corp-Lon-Core-Network-NSGInfra",
            "resource_group_name": "Corp-Lon-Network",
            "security_rule": [],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rgNetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnetInfra",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].Main",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/4eba850c-01a8-4df2-ab0e-99abc5db481c/resourceGroups/Corp-Lon-Network/providers/Microsoft.Network/virtualNetworks/Corp-Lon-Core-VNET/subnets/Corp-Lon-Core-VNET-Subnet-Clients",
            "name": "Corp-Lon-Core-VNET-Subnet-Clients",
            "resource_group_name": "Corp-Lon-Network",
            "virtual_network_name": "Corp-Lon-Core-VNET"
          },
          "dependencies": [
            "azurerm_network_security_group.loncorpnetNSGInfra",
            "azurerm_resource_group.rgNetwork",
            "azurerm_virtual_network.loncorpnetcore"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "loncorpnetcore",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].Main",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "dns_servers": [
              "10.0.0.4",
              "10.0.0.5"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "b9958843-eafe-4f55-a2b1-b8deadab32f2",
            "id": "/subscriptions/4eba850c-01a8-4df2-ab0e-99abc5db481c/resourceGroups/Corp-Lon-Network/providers/Microsoft.Network/virtualNetworks/Corp-Lon-Core-VNET",
            "location": "uksouth",
            "name": "Corp-Lon-Core-VNET",
            "resource_group_name": "Corp-Lon-Network",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/4eba850c-01a8-4df2-ab0e-99abc5db481c/resourceGroups/Corp-Lon-Network/providers/Microsoft.Network/virtualNetworks/Corp-Lon-Core-VNET/subnets/Corp-Lon-Core-VNET-Subnet-Infra",
                "name": "Corp-Lon-Core-VNET-Subnet-Infra",
                "security_group": "/subscriptions/4eba850c-01a8-4df2-ab0e-99abc5db481c/resourceGroups/Corp-Lon-Network/providers/Microsoft.Network/networkSecurityGroups/Corp-Lon-Core-Network-NSGInfra"
              }
            ]
          },
          "dependencies": [
            "azurerm_network_security_group.loncorpnetNSGInfra",
            "azurerm_resource_group.rgNetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "loninternetvnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].Main",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "20.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "4c096455-c59b-497b-a2d6-0fc18ee3cc13",
            "id": "/subscriptions/4eba850c-01a8-4df2-ab0e-99abc5db481c/resourceGroups/Corp-Lon-Internet/providers/Microsoft.Network/virtualNetworks/Corp-Lon-Internet-Vnet",
            "location": "uksouth",
            "name": "Corp-Lon-Internet-Vnet",
            "resource_group_name": "Corp-Lon-Internet",
            "subnet": [
              {
                "address_prefix": "20.0.1.0/24",
                "id": "/subscriptions/4eba850c-01a8-4df2-ab0e-99abc5db481c/resourceGroups/Corp-Lon-Internet/providers/Microsoft.Network/virtualNetworks/Corp-Lon-Internet-Vnet/subnets/Corp-Lon-Internet-Subnet",
                "name": "Corp-Lon-Internet-Subnet",
                "security_group": "/subscriptions/4eba850c-01a8-4df2-ab0e-99abc5db481c/resourceGroups/Corp-Lon-Internet/providers/Microsoft.Network/networkSecurityGroups/Corp-Lon-Internet-NSG"
              }
            ],
            "tags": {
              "Office": "London",
              "environment": "Production",
              "type": "External"
            }
          },
          "dependencies": [
            "azurerm_network_security_group.Lonintenretnsg",
            "azurerm_resource_group.Loninternet"
          ]
        }
      ]
    }
  ]
}